2007-05-23  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki/page.rb: add Vary to response headers.

2007-04-08    <wiki@boron.rubyist.net>
	* misc/plugin/attach.rb: get image size of other pages correctly.

2007-03-14  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* misc/webrick/hikilet.rb: set $SAFE=1 in Hikilet.
	return hiki.cgi style response on error.
	support xmlrpc.
	* hiki/xmlrpc.rb: support hikilet.

2007-02-06  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (cmd_view): fix too-escaped bug in title (closes
	#76).

2007-01-12  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/src.rb: use the language and charset configured as
	default (by Richard Zidlicky).

2007-01-01  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/amazon.rb, misc/plugin/en/amazon.rb,
	misc/plugin/ja/amazon.rb: import the tDiary's amazon plugin.

2006-11-26  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/storage.rb (md5hex): use MD5.hexdigest(s) instead of
	MD5.new(s).hexdigest (closes #73).

2006-10-16  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki.cgi: return status 500 on error.

2006-10-11  Kouhei Yanagita <yanagi@shakenbu.org>
	* style/default/html_formatter.rb (URI_RE): allow file scheme in URI.

2006-10-05  Kazuhiko  <kazuhiko@fdiary.net>

	* hiki/command.rb: check postable? if request method is "POST".
	* misc/plugin/bbs.rb, misc/plugin/comment.rb, misc/plugin/its.rb,
	misc/plugin/trackback.rb: cancel checking postable? in plugins.

2006-10-04  Kazuhiko  <kazuhiko@fdiary.net>

	* plugin/00default.rb: add postable?.
	* hiki/command.rb, misc/plugin/bbs.rb, misc/plugin/comment.rb,
	misc/plugin/its.rb, misc/plugin/trackback.rb: use postable?.
	* misc/plugin/rbl.rb: add a new plugin that overrides postable? by
	looking up Realtime Blackhole Lists.

2006-09-03  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/amazon.rb: follow up to change <title> format and
	image URL (closes #70) .

2006-09-03  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* misc/webrick/hikilet.rb: session_id bug fix.
