@@ -1,4 +1,4 @@
-# $Id: session.rb,v 1.9 2006-08-07 01:57:11 fdiary Exp $
+# $Id: session.rb,v 1.10 2007-06-23 13:32:25 yanagita Exp $
 # Copyright (C) 2004 Kazuhiko <kazuhiko@fdiary.net>
 
 module Hiki
@@ -76,7 +76,9 @@ module Hiki
     def create_new_id
       require 'digest/md5'
       md5 = Digest::MD5::new
-      md5.update(String(Time::now))
+      now = Time::now
+      md5.update(now.to_s)
+      md5.update(String(now.usec))
       md5.update(String(rand(0)))
       md5.update(String($$))
       md5.update('foobar')
