@@ -1,3 +1,7 @@
+2007-06-22  Kouhei Yanagita <yanagi@shakenbu.org>
+	* hiki/session.rb (create_new_id): use Time#usec to make a session id
+	more hard-to-crack.
+
 2007-05-23  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 	* hiki/page.rb: add Vary to response headers.
 
